tests/neg/i7814.scala
def i0 = Unit  // error